2000-09-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/gnustep/base/GSXML.h: Added ([-parser:]) and removed
	redundant 'length' info from callbacks.
	* Source/GSXML.m: Added ([-parser:]), tidied ([-parser]), fixed
	scope of functions, and removed redundant 'length' info from callbacks.
	* Documenttion/gsdoc/GSXMLParser.gsdoc: document ([-parser:])
        * Documentation/gsdoc/GSSAXHandler.gsdoc: update for removal of
	redundant 'length' info on some callbacks.
	* Source/externs.m: Initialise strings using NSGCString because the
	NSString class +initialize method may not have completed when this
	is done - so NSString won't have cached its cocrete and abstract
	classes.
	* Source/GSCompatibility.m: Partial write of code to generate MacOS-X
	compatible (XML) property-list text.
	* Tools/gsdoc.m: Major (3 hours) effort to get code back to something
	vaguely like conformance with coding standards!  Hope nothing got
	broken.

2000-09-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/gnustep/base/GSXML.h:
	* Source/GSXML.m: Revert to earlier version to remove
	formatting/coding-standards errors, broken GSSAXHandler class,
	and complexity adding api additions.
	Continued integration of Michael Pakhantsovs code.
	Added Manuels +xmlEncodingStringForStringEncoding with tidying.
	Added Manuels -typeDescription with rewrite for performance.
	* Documenttion/gsdoc/GSXMLParser.gsdoc:
	added xmlEncodingStringForStringEncoding
	* Documenttion/gsdoc/GSXMLNode.gsdoc: 
	added -typeDescription
	* Documentation/gsdoc/GSSAXHandler.gsdoc: added -parser method.

2000-09-19  Manuel Guesdon <mguesdon@orange-concept.com>
	You'll need libxml2 v >= 2.2.3 to compile GSXML
	* Source/GSXML.m & Headers/Foundation/GSXML.h:
	corrected bugs,
	added added non guessing construction methods in GSXMLParser
	added -typeDescription in GSXMLNode
	added +xmlEncodingStringForStringEncoding: in GSXMLParser
	added inParserContext:(void*)parserContext parameter for GSSAXHandler
	